--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Dragon</title>
     <link rel="stylesheet" href="./index.css">
+    <link rel="icon" type="image/x-icon" href="./imgs/favicon.ico">
 </head>
 <body>
     <div class="background-video">
