--- a/explore.html
+++ b/explore.html
@@ -62,14 +62,15 @@
                     <img src="./imgs/drags.png" alt="dragon">
                 </div>
             </div>
-            <p class="the-second">Greetings, brave souls, and welcome to the lair of the Chinese Wood Dragon, where the ancient dragon lore intertwines with the pulsating heart of crypto memes. We're not just another token; we are the embodiment of dragon might, weaving together the wisdom of our forebears with the irreverence and exhilaration of the crypto meme revolution.</p>
+            <p class="the-second">Brace yourselves for the most electrifying ride of 2024! The Wood Dragon is no ordinary celestial event—it's a cosmic fusion of innovation, growth, and boundless potential. Picture a year where visionary leaders thrive, technology leaps forward, and the crypto realm ignites with unstoppable energy. It's a rare convergence of the Dragon's success and the Wood's vitality—a chance to be part of a legacy, to pioneer change, and embrace a year brimming with limitless possibilities. Join us in harnessing the Wood Dragon's power, and let's soar into a year that promises innovation, growth, and a revolution in the making!</p>
             <p><button class="gstarted">GET STARTED</button></p>
             <div class="btns-top">
-                <a href="#"><button class="bbtns">Buy $DRAGON</button></a>
+                <a href="#"><button class="bbtns">Buy $DRAGON ON ETH</button></a>
+                <a href="#"><button class="bbtns">Buy $DRAGON ON SOL</button></a>
                 <a href="#"><button class="bbtns">TELEGRAM</button></a>
-                <a href="#"><button class="bbtns cAT">TWITTER</button></a>
-                <button class="bbtns cAc" id="cooop">Contract Address: Ox4ad434b8... <img src="./imgs/copy.png" alt="copy" id="cpy"></button>
-                <a href="#"><button class="bbtns cAT2">TWITTER</button></a>
+                <a href="#"><button class="bbtns">TWITTER</button></a>
+                <!-- <button class="bbtns cAc" id="cooop">Contract Address: Ox4ad434b8... <img src="./imgs/copy.png" alt="copy" id="cpy"></button>
+                <a href="#"><button class="bbtns cAT2">TWITTER</button></a> -->
             </div>
         </div>
         <p id="copyText" style="display: none;">0x94Dd3247a6936d2552CE1EEDbaf6890575C2BD0d</p>
@@ -94,18 +95,19 @@
         </div>
         <div class="sec3">
             <div class="sec3Left">
-                <p class="setApart">What Sets Us Apart?</p>
+                <p class="setApart">CHARACTERISTICS of WOOD Dragon</p>
                 <br><p class="apart1 indaboski">Chinese Wood Dragon transcends the ordinary; we are the keepers of a new dragon dynasty in the crypto meme cosmos. Here's what makes us soar above the clouds:</p>
                 <br><br>
-                <p class="apart1"><span class="cfu">Cultural Fusion in Dragonflight:</span> We bridge the gap between ancient dragon lore and the digital expanse of cryptocurrencies, celebrating the rich legacy of the dragon in a digital tapestry.</p>
+                <p class="apart1"><span class="cfu">Year of the Wood Dragon 2024:</span> Think visionary leaders, innovators, and problem-solvers! This cosmic mashup of growth, creativity, and stability is like hitting the jackpot in the zodiac world. Get ready for a ride packed with vitality, creativity, and relentless drive!</p>
                 <br>
-                <p class="apart1"><span class="cfu">Meme Draconis:</span> Our community pulsates with the rhythm of dragon wings as we create and share memes that capture the very essence of the Chinese Wood Dragon. We believe in the dragon's laughter, uniting our kin in a vibrant fellowship.</p>
+                <p class="apart1"><span class="cfu">What's in Store:</span> It's not just a coin; it's a gateway to a year brimming with opportunities. Fintech, AI, cybersecurity, blockchain—these are the playgrounds where the Wood Dragon reigns supreme. And guess what? The Dragon's blessings favor those who embrace new tech and ace their marketing game!</p>
                 <br>
-                <p class="apart1"><span class="cfu">Eco-Fire Breath:</span> As a token infused with the spirit of the Wood element, we are committed to eco-friendly practices in the crypto kingdom. We actively pursue sustainable solutions, a testament to the dragon's reverence for nature.</p>
+                <p class="apart1"><span class="cfu">Astrology & Crypto Unite:</span> Wood brings vitality and creativity, while the dragon symbolizes success and honor. Mix them, and you've got a recipe for unstoppable energy and unwavering determination! People born in this year dream big, innovate fearlessly, and pursue their goals with laser-like focus.</p>
                 <br>
-                <p class="apart1"><span class="cfu">Community Dragon's Horde:</span> Chinese Wood Dragon is designed to reward its kin. Holders revel in the unique dragonomic blessings, and we seek counsel from our brethren to sculpt the destiny of our project.</p>
+                <p class="apart1"><span class="cfu">Abundance & Progress:</span> Get set for growth galore! This year isn't just about quick gains—it's about laying solid foundations for the long haul. Remember, the last Wood Dragon danced its way 60 years ago, and we're about to make history again!</p>
                 <br>
-                <p><a href="#"><button class="bBtn">BUY</button></a><a href="#"><button class="bBtn2">CHART</button></a></p>
+                <p><a href="#"><button class="bbtns">Buy $DRAGON ON ETH</button></a>
+                    <a href="#"><button class="bbtns">Buy $DRAGON ON SOL</button></a><a href="#"><button class="bBtn2">CHART</button></a></p>
             </div>
             <div class="sec3Right">
                 <img src="./imgs/bigDrag.png" alt="big dragon">
@@ -120,7 +122,11 @@
                         <p class="bTa">0% Sell Tax</p>
                     </div>
                 </div>
-                <p class="bTa2">1 Billion Supply</p>
+                <div class="buySell">
+                    <p class="bTa2">1 Billion Supply</p>
+                    <p class="bTa2">LP BURNT</p>
+                </div>
+                <p class="bTa2 bTa3">CONTRACT RENOUNCED</p>
             </div>
     
             <div class="hBuy" id="h2b">
@@ -128,10 +134,11 @@
                 <div class="dec">
                     <ul>
                         <li class="dotdot">Download Metamask or your wallet of choice from the app store or Google Play store for free. Desktop users, download the Google Chrome extension by going to metamask.io.</li>
-                        <li class="dotdot">Have ETH in your wallet to switch to $DRAGON. If you don't have any ETH, you can buy directly on Metamask, transfer from another wallet, or buy on another exchange and send it to your wallet.</li>
-                        <li class="dotdot">Switch ETH for $DRAGON. You may need to use slippage during times of market volatility.</li>
+                        <li class="dotdot">Have ETH or SOL in your wallet to switch to $DRAGON. If you don't have any ETH, you can buy directly on Metamask, transfer from another wallet, or buy on another exchange and send it to your wallet.</li>
+                        <li class="dotdot">Switch ETH or SOL for $DRAGON. You may need to use slippage during times of market volatility.</li>
                     </ul>
-                    <h4 class="ca">CA $FAWKES: 0x6F3cBE18e9381dEc6026e6Cb8166C13944fCFeE1</h4>
+                    <h4 class="ca">SOL CA $DRAGON: 0x6F3cBE18e9381dEc6026e6Cb8166C13944fCFeE1</h4>
+                    <h4 class="ca">ETH CA $DRAGON: 0x6F3cBE18e9381dEc6026e6Cb8166C13944fCFeE1</h4>
                 </div>
             </div>
         </div>
@@ -179,7 +186,11 @@
                         <p class="mSq">UNISWAP</p>
                     </div>
                     <div class="maxRow">
-                        <p class="mSp">CONTRACT</p>
+                        <p class="mSp">CONTRACT SOL</p>
+                        <p class="mSq">0x94Dd324...<span class="adCpy" id="ccpp">COPY</span> </p>
+                    </div>
+                    <div class="maxRow">
+                        <p class="mSp">CONTRACT ETH</p>
                         <p class="mSq">0x94Dd324...<span class="adCpy" id="ccpp">COPY</span> </p>
                     </div>
                     <div class="maxRow">
