updated copy to clip

--- a/explore.html
+++ b/explore.html
@@ -74,6 +74,7 @@
             </div>
         </div>
         <p id="copyText" style="display: none;">0x94Dd3247a6936d2552CE1EEDbaf6890575C2BD0d</p>
+        <p id="copyText2" style="display: none;">0x94Dd3247a6936d2552CE1EEDbaf6890575C2BD0d</p>
         <div class="sec2">
             <div class="sec2One">
                 <div class="sec2oneInner">
@@ -187,7 +188,7 @@
                     </div>
                     <div class="maxRow">
                         <p class="mSp">CONTRACT SOL</p>
-                        <p class="mSq">0x94Dd324...<span class="adCpy" id="ccpp">COPY</span> </p>
+                        <p class="mSq">0x94Dd324...<span class="adCpy" id="cooop">COPY</span> </p>
                     </div>
                     <div class="maxRow">
                         <p class="mSp">CONTRACT ETH</p>
